Revert "fix aligned images"
This reverts commit 4a4298fe

--- a/static-prototype/assets/sass/util/_blocks.sass
+++ b/static-prototype/assets/sass/util/_blocks.sass
@@ -1,17 +1,21 @@
 .image-right,
 .alignright
-  &,
-  .wp-block-image &
-    position: relative
-    float: right
-    padding: 0em
-    margin: 1.2em 1em 4em 3em
-    @media (max-width: $break-small)
-      margin: 2em auto 4em
+  position: relative
+  float: right
+  padding: 0em
+  margin: 1.2em 1em 4em 3em
+  @media (max-width: $break-small)
+    margin: 2em auto 4em
+    width: 100%
+    img
       width: 100%
-      img
-        width: 100%
-        height: auto
+      height: auto
+  @media (min-width: $break-medium)
+    right: -3rem
+    margin-left: 0
+  @media (min-width: $break-large)
+    right: -8rem
+    margin-left: 0
 
 .image-right--float
   @media (min-width: ($break-ml + 40px))
@@ -41,34 +45,22 @@
 
 .image-left,
 .alignleft
-  &,
-  .wp-block-image &
-    position: relative
-    float: left
-    padding: 0em
-    margin: 1.2em 3em 4em 0
-    @media (max-width: $break-small)
-      margin: 2em auto 4em
+  position: relative
+  float: left
+  padding: 0em
+  margin: 1.2em 3em 4em 0
+  @media (max-width: $break-small)
+    margin: 2em auto 4em
+    width: 100%
+    img
       width: 100%
-      img
-        width: 100%
-        height: auto
+      height: auto
+  @media (min-width: $break-medium)
+    left: -2rem
+    margin-right: 0
+  @media (min-width: $break-large)
+    left: -5rem
 
-img.alignright,
-img.alignleft
-  height: auto
-
-.wp-block-image
-  .alignright
-    @media (min-width: $break-medium)
-      margin-right: -4rem
-    @media (min-width: $break-large)
-      margin-right: -8rem
-  .alignleft
-    @media (min-width: $break-medium)
-      margin-left: -4rem
-    @media (min-width: $break-large)
-      margin-left: -5rem
 
 .clip-alpaka
   display: block
